On branch master 	modified:   .gitignore; Ignore all css files 	modified:   sass/components/_story.scss; Fixed image align center

--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,9 @@ body {
     clip-path: circle(50% at 50% 50%);
     position: relative; }
   .story__image {
-    height: 100%; }
+    position: relative;
+    height: 100%;
+    transform: translateX(-2rem); }
   .story__name {
     color: white;
     font-size: 1.8rem;
